--- a/DataCleaning/water data cleaning.Rmd
+++ b/DataCleaning/water data cleaning.Rmd
@@ -447,22 +447,45 @@ Due to bad readings when sampling, there are negative values for some of the con
 
 However, notice that there are actually quite a few negative values in the fixed-site, surface-level samples.
 
+We are going to be setting all of the negative values to the minimums. We can get a list of the minimum values and then mutate each column based of the associated minimum value.
+
 ```{r}
+# Get a list of minimum values
+neg_cols <- water_var[c(1, 2, 3, 8, 9, 10)]
+minimums <- c(0.024, .001, .1, 0.02, 0.0, 0.00962 )
 
 tmp <- qfwater20 %>%
   mutate(across(water_var[water_var != "TEMP"], ~ ifelse(. < 0, NA, .)))
 
 
+### Just TP
+sum(qfwater20$TP < 0, na.rm = TRUE) 
+qfwater20$TP
+# Set na TP values to detection limit - .001
+tmp2 <- mutate( qfwater20, TP = ifelse(TP < 0, .001, TP))
+sum(tmp2$TP < 0, na.rm = TRUE) 
+### 
+
+# Function that will replace any negative values in a column with a specified value
+replace_negatives <- function(neg_col, replace_val, data) {
+  data <- mutate( data, neg_col = ifelse(TP < 0, replace_val, neg_col))
+}
+
+water <- lapply(1: length(neg_cols), replace_negatives, neg_cols, minimums, qfwater20)
 
 
-lapply(water_var[!(water_var %in% c("WDP", "CHLcal"))], function(var, df) 
-  df %>%
-    select(all_of(c(var, paste(var, "QF", sep = "")))) %>%
-    filter(!!sym(var) < 0) %>%
-    mutate(var = paste(var)) %>%
-    ggplot(aes(x = !!sym(var))) + 
-             geom_histogram(aes(fill = !!sym(paste(var, "QF", sep = ""))), 
-                            bins = 10), water20)
+
+
+
+
+#lapply(water_var[!(water_var %in% c("WDP", "CHLcal"))], function(var, df) 
+#  df %>%
+#    select(all_of(c(var, paste(var, "QF", sep = "")))) %>%
+#    filter(!!sym(var) < 0) %>%
+#    mutate(var = paste(var)) %>%
+#    ggplot(aes(x = !!sym(var))) + 
+#             geom_histogram(aes(fill = !!sym(paste(var, "QF", sep = ""))), 
+#                            bins = 10), water20)
 
 # lapply(water_var, function(var, df) 
 #   df %>%
